Adding repository and controller

--- a/BackEnd/UsersApp/src/main/resources/application.properties
+++ b/BackEnd/UsersApp/src/main/resources/application.properties
@@ -6,7 +6,11 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 spring.devtools.restart.enabled = true
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=BookStore
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=BookStore
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ing_accounts
+spring.datasource.username=inguser
+spring.datasource.password=ThePassword
