--- a/BackEnd/UsersApp/src/main/resources/application.properties
+++ b/BackEnd/UsersApp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:0}
+server.port=9090
 spring.application.name=users-ws
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
